--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       target: builder
-    command: pnpm run dev
+    command: sh -c "pnpm install && pnpm run dev"
     ports:
       - "5858:3000"
     volumes:
