--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:prodB": "docker compose up prod -d",
     "set:dev": "docker compose build dev",
     "set:prod": "docker compose build --no-cache prod",
-    "unset:dev": "docker compose down --rmi all dev",
-    "unset:prod": "docker compose down --rmi all prod" 
+    "unset:dev": "docker compose down --rmi all --volumes",
+    "unset:prod": "docker compose down --rmi all --volumes" 
   },
   "dependencies": {
     "react": "19.1.0",
