fix: dev running issue
what: The dev container is not work because of node modules dependencies('pnpm install --prod')
how: make one step for dev running stage and make one step for downloading only production node modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 # Docker Compose 파일 형식 버전
-version: '3.8'
-
 services:
   dev:
     container_name: project-mini-dev
     build:
       context: .
-      target: builder
-    command: sh -c "pnpm install && pnpm run dev"
+      target: dev_runner 
+    command: sh -c "pnpm run dev"
     ports:
       - "5858:3000"
     volumes:
