feature: add certbot container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,13 @@ services:
       - NODE_ENV=production
     restart: unless-stopped
 
+  certbot:
+    container_name: project-mini-certbot
+    image: certbot/certbot
+    volumes:
+      - ./nginx/certs:/etc/letsencrypt
+      - ./nginx/www:/var/www/certbot
+
 networks:
   project-mini-network:
     driver: bridge
