--- a/nginx/nginx_backup.conf
+++ b/nginx/nginx_backup.conf
@@ -16,6 +16,13 @@ server {
     }
 
     location / {
-        return 404;
+        # 전달 대상
+        proxy_pass http://nextjs_app;
+
+        # 클라이언트의 원래 요청 정보 전달을 위한 헤더 설정
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
