feature:finished certbot & make script for certbot renewal

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,39 @@
 # nginx/nginx.conf 
 
+# 1. Next.js 앱으로 트래픽을 전달 서버 그룹 
+upstream nextjs_app {
+    server app-blue:3000;
+}
+
+# 2. HTTP 서버 
 server {
     listen 80;
-    server_name paul-ryu-0314.iptime.org;
+    server_name paulryu9309.ddns.net;
 
-    location /.well-knownacme-challenge/ {
+    location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
-        return 404;
+        return 301 https://$host$request_uri;
+    }
+}
+
+# 3. HTTPS 서버 
+server {
+    listen 443 ssl;
+    server_name paulryu9309.ddns.net;
+
+    # SSL 인증서 파일 경로
+    ssl_certificate /etc/letsencrypt/live/paulryu9309.ddns.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/paulryu9309.ddns.net/privkey.pem;
+
+    # Next.js 앱으로 트래픽 전달
+    location / {
+        proxy_pass http://nextjs_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
