--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,8 +43,12 @@ pipeline {
             script {
                 def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
                 withCredentials([usernamePassword(credentialsId: GHCR_CREDS_ID, usernameVariable: 'USER', passwordVariable: 'TOKEN')]) {
-                    sh "echo $TOKEN | docker login ghcr.io -u $USER --password-stdin"
-                    sh "docker push ${imageTag}"
+                    sh '''
+                        docker login -u ${USER} --password-stdin ghcr.io << EOF
+                        ${TOKEN}
+                        EOF
+                    '''
+                    sh "docker push ${imageTag} "
                 }
             }
         }
@@ -64,20 +68,20 @@ pipeline {
 
                 sshagent(credentials: [TARGET_SSH_CREDS_ID]) {
                     sh """ 
-                        ssh -o StrictHostKeyChecking=no -p ${TARGET_PORT} ${TARGET_HOST} '
+                        ssh -o StrictHostKeyChecking=no -p ${TARGET_PORT} ${TARGET_HOST} 'set -e
                         echo "--- (1/4) Pull the new image : ${imageTag} ---"
-                        docker pull ${imageTag}
+                        docker pull ${imageTag} || exit 1
 
                         echo "--- (2/4) Replace ${deployService} Server to new  ---"
                         cd ${TARGET_PROJECT_PATH}
                         echo "${deployEnvVar}=${imageTag}" > .env.${deployService}
-                        docker compose --env-file .env.${deployService} up -d --no-deps ${deployService}
+                        docker compose -f docker-compose.yml --env-file .env.${deployService} up -d --no-deps ${deployService} || exit 1
 
                         echo "--- (3/4) Switch Nginx Configuration to change traffic ---"
-                        sed -i "s/server ${upstreamService}:3000;/server ${deployService}:3000;/" ${TARGET_PROJECT_PATH}/nginx/nginx.conf
+                        sed -i "s|server ${upstreamService}:3000;|server ${deployService}:3000;|" ${TARGET_PROJECT_PATH}/nginx/nginx.conf exit 1
 
                         echo "--- (4/4) Reload Nginx Configuration ---"
-                        docker compose exec nginx nginx -s reload
+                        docker compose -f docker-compose.yml exec -T nginx nginx -s reload || exit 1
                         
                         echo "--- All Deploy Proccess is done ---"
                         '
