--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,101 +17,108 @@ pipeline {
         TARGET_PROJECT_PATH = '/home/hansol/workspace/project-mini-frontend'
     }
 
+    stages {
     // code pull
-    stage('Checkout') {
-        steps {
-            echo "1. Get the latest code from GitHub"
-            git credentialsId: GITHUB_CREDS_ID, url: 'https://github.com/paul2021-r/project-mini-frontend.git', branch: 'main'
-        }
-    }
-
-    // build image
-    stage('Build Image') {
-        steps {
-            echo "2. Build New Docker Image"
-            script {
-                def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}" 
-                sh "docker build -t ${imageTag} ./app" 
+        stage('Checkout') {
+            steps {
+                echo "1. Get the latest code from GitHub"
+                git credentialsId: GITHUB_CREDS_ID, url: 'https://github.com/paul2021-r/project-mini-frontend.git', branch: 'main'
             }
         }
-    }
 
-    // push image
-    stage('Push to GHCR') {
-        steps {
-            echo "3. Push the Docker Image to GHCR"
-            script {
-                def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
-                withCredentials([usernamePassword(credentialsId: GHCR_CREDS_ID, usernameVariable: 'USER', passwordVariable: 'TOKEN')]) {
-                    sh '''
-                        docker login -u ${USER} --password-stdin ghcr.io << EOF
-                        ${TOKEN}
-                        EOF
-                    '''
-                    sh "docker push ${imageTag}"
+        // build image
+        stage('Build Image') {
+            steps {
+                echo "2. Build New Docker Image"
+                script {
+                    def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}" 
+                    sh "docker build -t ${imageTag} ./app" 
+                }
+            }
+        }
+
+        // push image
+        stage('Push to GHCR') {
+            steps {
+                echo "3. Push the Docker Image to GHCR"
+                script {
+                    def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
+                    withCredentials([usernamePassword(credentialsId: GHCR_CREDS_ID, usernameVariable: 'USER', passwordVariable: 'TOKEN')]) {
+                        sh '''
+                            docker login -u ${USER} --password-stdin ghcr.io << EOF
+                            ${TOKEN}
+                            EOF
+                        '''
+                        sh "docker push ${imageTag}"
+                    }
+                }
+            }
+        }
+
+        // deploy to server
+        stage('Deploy to Server') {
+            steps {
+                echo "4. Deploy the new image to the ${TARGET_DEPLOY_SERVER} server"
+                script {
+                    // 어떤 컨테이너를 업데이트 및 업스트림 대상을 지정
+                    def deployService = (env.BUILD_NUMBER.toInteger() % 2 == 0) ? "app-green" : "app-blue" 
+                    def upstreamService = (deployService == "app-green") ? "app-blue" : "app-green"
+                    def deployEnvVar = (deployService == "app-green") ? "APP_GREEN_IMAGE" : "APP_BLUE_IMAGE"
+
+                    def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
+
+                    sshagent(credentials: [TARGET_SSH_CREDS_ID]) {
+                        sh """ 
+                            ssh -o StrictHostKeyChecking=no -p ${TARGET_PORT} ${TARGET_HOST} '
+                            set -e
+                            
+                            echo "--- (1/4) Pull the new image : ${imageTag} ---"
+                            docker pull ${imageTag}
+
+                            echo "--- (2/4) Replace ${deployService} Server to new  ---"
+                            cd ${TARGET_PROJECT_PATH}
+                            echo "${deployEnvVar}=${imageTag}" > .env.${deployService}
+                            docker compose -f docker-compose.yml --env-file .env.${deployService} up -d --no-deps ${deployService}
+
+                            echo "--- (3/4) Switch Nginx Configuration to change traffic ---"
+                            sed -i "s|server ${upstreamService}:3000;|server ${deployService}:3000;|" ${TARGET_PROJECT_PATH}/nginx/nginx.conf
+
+                            echo "--- (4/4) Reload Nginx Configuration ---"
+                            docker compose -f docker-compose.yml exec -T nginx nginx -s reload
+                            
+                            echo "--- All Deploy Proccess is done ---"
+                            '
+                        """
+                    }
                 }
             }
         }
     }
-
-    // deploy to server
-    stage('Deploy to Server') {
-        steps {
-            echo "4. Deploy the new image to the ${TARGET_DEPLOY_SERVER} server"
-            script {
-                // 어떤 컨테이너를 업데이트 및 업스트림 대상을 지정
-                def deployService = (env.BUILD_NUMBER.toInteger() % 2 == 0) ? "app-green" : "app-blue" 
-                def upstreamService = (deployService == "app-green") ? "app-blue" : "app-green"
-                def deployEnvVar = (deployService == "app-green") ? "APP_GREEN_IMAGE" : "APP_BLUE_IMAGE"
-
-                def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
-
-                sshagent(credentials: [TARGET_SSH_CREDS_ID]) {
-                    sh """ 
-                        ssh -o StrictHostKeyChecking=no -p ${TARGET_PORT} ${TARGET_HOST} '
-                        set -e
-                        
-                        echo "--- (1/4) Pull the new image : ${imageTag} ---"
-                        docker pull ${imageTag}
-
-                        echo "--- (2/4) Replace ${deployService} Server to new  ---"
-                        cd ${TARGET_PROJECT_PATH}
-                        echo "${deployEnvVar}=${imageTag}" > .env.${deployService}
-                        docker compose -f docker-compose.yml --env-file .env.${deployService} up -d --no-deps ${deployService}
-
-                        echo "--- (3/4) Switch Nginx Configuration to change traffic ---"
-                        sed -i "s|server ${upstreamService}:3000;|server ${deployService}:3000;|" ${TARGET_PROJECT_PATH}/nginx/nginx.conf
-
-                        echo "--- (4/4) Reload Nginx Configuration ---"
-                        docker compose -f docker-compose.yml exec -T nginx nginx -s reload
-                        
-                        echo "--- All Deploy Proccess is done ---"
-                        '
-                    """
-                }
-            }
-        }
-    }
-
-
+   
     post {
         success {
             echo "Deployment succeeded. Now send a discord notification."
+            script {
+                withCredentials([string(credentialsId: DISCORD_CREDS_ID, variable: 'DISCORD_URL')]) {
+                    def message = "{\"content\": \"🚀 Build Process is successfully finished : **[${env.JOB_NAME}]** - **#${env.BUILD_NUMBER}**\"}"
 
-            withCredentials([string(credentialsId: DISCORD_CREDS_ID, variable: 'DISCORD_URL')]) {
-                def message = "{\"content\": \"🚀 Build Process is successfully finished : **[${env.JOB_NAME}]** - **#${env.BUILD_NUMBER}**\"}"
+                    sh "curl -X POST -H 'Content-Type: application/json' --data '${message}' ${DISCORD_URL}"
+                }
 
-                sh "curl -X POST -H 'Content-Type: application/json' --data '${message}' ${DISCORD_URL}"
             }
+
         }
         failure {
             echo "Deployment failed! Now send a discord notification."
 
-            withCredentials([string(credentialsId: DISCORD_CREDS_ID, variable: 'DISCORD_URL')]) {
-                def message = "{\"content\": \"🔥 Build Process is failed. Check Build logs ${env.BUILD_URL} : **[${env.JOB_NAME}]** - **#${env.BUILD_NUMBER}**\"}"
+            script {
+                withCredentials([string(credentialsId: DISCORD_CREDS_ID, variable: 'DISCORD_URL')]) {
+                    def message = "{\"content\": \"🔥 Build Process is failed. Check Build logs ${env.BUILD_URL} : **[${env.JOB_NAME}]** - **#${env.BUILD_NUMBER}**\"}"
 
-                sh "curl -X POST -H 'Content-Type: application/json' --data '${message}' ${DISCORD_URL}"
+                    sh "curl -X POST -H 'Content-Type: application/json' --data '${message}' ${DISCORD_URL}"
+                }    
             }
+            
         }
         always {
             echo "Logout from GHCR"
