--- a/jenkinsfile
+++ b/jenkinsfile
@@ -62,29 +62,36 @@ pipeline {
                     def deployEnvVar = (deployService == "app-green") ? "APP_GREEN_IMAGE" : "APP_BLUE_IMAGE"
 
                     def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
+                    withCredentials([usernamePassword(credentialsId: GHCR_CREDS_ID, usernameVariable: 'GHCR_USER', passwordVariable: 'GHCR_TOKEN')]) {
+                        sshagent(credentials: [TARGET_SSH_CREDS_ID]) {
+                            sh """ 
+                                ssh -o StrictHostKeyChecking=no -p ${TARGET_PORT} ${TARGET_HOST} '
+                                set -ex
+                                
+                                echo "--- Logging in to GHCR on target server ---"
+                                echo "${GHCR_TOKEN}" | docker login ghcr.io -u ${GHCR_USER} --password-stdin
 
-                    sshagent(credentials: [TARGET_SSH_CREDS_ID]) {
-                        sh """ 
-                            ssh -o StrictHostKeyChecking=no -p ${TARGET_PORT} ${TARGET_HOST} '
-                            set -ex
-                            
-                            echo "--- (1/4) Pull the new image : ${imageTag} ---"
-                            docker pull ${imageTag}
+                                echo "--- (1/4) Pull the new image : ${imageTag} ---"
+                                docker pull ${imageTag}
 
-                            echo "--- (2/4) Replace ${deployService} Server to new  ---"
-                            cd ${TARGET_PROJECT_PATH}
-                            echo "${deployEnvVar}=${imageTag}" > .env.${deployService}
-                            docker compose -f docker-compose.yml --env-file .env.${deployService} up -d --no-deps ${deployService}
+                                echo "--- (2/4) Replace ${deployService} Server to new  ---"
+                                cd ${TARGET_PROJECT_PATH}
+                                echo "${deployEnvVar}=${imageTag}" > .env.${deployService}
+                                docker compose -f docker-compose.yml --env-file .env.${deployService} up -d --no-deps ${deployService}
 
-                            echo "--- (3/4) Switch Nginx Configuration to change traffic ---"
-                            sed -i "s|server ${upstreamService}:3000;|server ${deployService}:3000;|" ${TARGET_PROJECT_PATH}/nginx/nginx.conf
+                                echo "--- (3/4) Switch Nginx Configuration to change traffic ---"
+                                sed -i "s|server ${upstreamService}:3000;|server ${deployService}:3000;|" ${TARGET_PROJECT_PATH}/nginx/nginx.conf
 
-                            echo "--- (4/4) Reload Nginx Configuration ---"
-                            docker compose -f docker-compose.yml exec -T nginx nginx -s reload
-                            
-                            echo "--- All Deploy Proccess is done ---"
-                            '
-                        """
+                                echo "--- (4/4) Reload Nginx Configuration ---"
+                                docker compose -f docker-compose.yml exec -T nginx nginx -s reload
+
+                                echo "--- Logging out from GHCR on target server ---"
+                                docker logout ghcr.io
+                                
+                                echo "--- All Deploy Proccess is done ---"
+                                '
+                            """
+                        }
                     }
                 }
             }
