--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,6 +26,43 @@ pipeline {
             }
         }
 
+        stage('Code Style Check') {
+            steps {
+                echo "2. Check Code Style and Format"
+                script {
+                        // 1. try 블록으로 메인 로직을 감쌉니다.
+                        try {
+                            def exitCode = sh(script:"pnpm format:check > output.log 2>&1", returnStatus: true)
+                            def output = readFile('output.log').trim()
+
+                            if (exitCode != 0) {
+                                withCredentials([string(credentialsId: DISCORD_CREDS_ID, variable: 'DISCORD_URL')]) {
+                                    
+                                    // (추가 개선) output에 "나 \가 포함되면 JSON이 깨질 수 있으므로 이스케이프합니다.
+                                    def jsonSafeOutput = output.replace('\\', '\\\\').replace('"', '\\"').replace('\n', '\\n')
+                                    
+                                    def message = "{\"content\": \"❌ Formatter Check is failed. Check logs ${env.BUILD_URL} : **[${env.JOB_NAME}]** - **#${env.BUILD_NUMBER}**\nerrorLog(${exitCode}): ${jsonSafeOutput}\"}"
+
+                                    sh "curl -X POST -H 'Content-Type: application/json' --data '${message}' ${DISCORD_URL}"
+                                }
+                                // Jenkins 로그에는 원본 output을 남깁니다.
+                                error "Code Formatting check Fialed(${exitCode}) ${output}"    
+                            }
+                            else {
+                                echo "2. Formatter check is successful."
+                            }
+                        } finally {
+                            // 2. 'finally' 블록에 정리 코드를 둡니다.
+                            //    이 블록은 위에서 error가 발생해도, 성공해도 "항상" 실행됩니다.
+                            echo "Cleaning up output.log..."
+                            // (추가 개선) -f 옵션으로 파일이 없어도 에러를 내지 않도록 합니다.
+                            sh "rm -f output.log"
+                        }
+                    }   
+                }
+            }
+        }
+
         // build image
         stage('Build Image') {
             steps {
