--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,9 @@
 pipeline {
     agent any
+
+    tools {
+        nodejs 'NodeJS-22'
+    }
     
     environment {
         GHCR_CREDS_ID = 'ghcr-creds'
