--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
 
         stage('Install Dependencies') {
             steps {
-                echo "Install Dependencies"
+                echo "2. Install Dependencies"
                 script {
                     dir('app') {
                         sh "pnpm install"
@@ -43,7 +43,7 @@ pipeline {
 
         stage('Code Style Check') {
             steps {
-                echo "2. Check Code Style and Format"
+                echo "3. Check Code Style and Format"
                 script {
                     dir('app') {
                         // 1. try 블록으로 메인 로직을 감쌉니다.
@@ -65,10 +65,9 @@ pipeline {
                                 error "Code Formatting check Fialed(${exitCode}) ${output}"    
                             }
                             else {
-                                echo "2. Formatter check is successful."
+                                echo "3. Formatter check is successful."
                             }
                         } finally {
-                            // 2. 'finally' 블록에 정리 코드를 둡니다.
                             //    이 블록은 위에서 error가 발생해도, 성공해도 "항상" 실행됩니다.
                             echo "Cleaning up output.log..."
                             // (추가 개선) -f 옵션으로 파일이 없어도 에러를 내지 않도록 합니다.
@@ -80,10 +79,49 @@ pipeline {
             }
         }
 
+        stage('Check Lint') {
+            steps {
+                echo "4. Check lint"
+                script {
+                    dir('app') {
+                        // 1. try 블록으로 메인 로직을 감쌉니다.
+                        try {
+                            def exitCode = sh(script:"pnpm lint > lint-output.log 2>&1", returnStatus: true)
+                            def output = readFile('lint-output.log').trim()
+
+                            if (exitCode != 0) {
+                                withCredentials([string(credentialsId: DISCORD_CREDS_ID, variable: 'DISCORD_URL')]) {
+                                    
+                                    // (추가 개선) output에 "나 \가 포함되면 JSON이 깨질 수 있으므로 이스케이프합니다.
+                                    def jsonSafeOutput = output.replace('\\', '\\\\').replace('"', '\\"').replace('\n', '\\n')
+                                    
+                                    def message = "{\"content\": \"❌ Lint Check is failed. Check logs ${env.BUILD_URL} : **[${env.JOB_NAME}]** - **#${env.BUILD_NUMBER}**errorLog(${exitCode}): ${jsonSafeOutput}\"}"
+
+                                    sh "curl -X POST -H 'Content-Type: application/json' --data '${message}' ${DISCORD_URL}"
+                                }
+                                // Jenkins 로그에는 원본 output을 남깁니다.
+                                error "Code Linting check Fialed(${exitCode}) ${output}"    
+                            }
+                            else {
+                                echo "4. Lint check is successful."
+                            }
+                        } finally {
+                            // 2. 'finally' 블록에 정리 코드를 둡니다.
+                            //    이 블록은 위에서 error가 발생해도, 성공해도 "항상" 실행됩니다.
+                            echo "Cleaning up lint-output.log..."
+                            // (추가 개선) -f 옵션으로 파일이 없어도 에러를 내지 않도록 합니다.
+                            sh "rm -f lint-output.log"
+                        }   
+                        
+                    }
+                }
+            }
+        }
+
         // build image
         stage('Build Image') {
             steps {
-                echo "2. Build New Docker Image"
+                echo "4. Build New Docker Image"
                 script {
                     def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}" 
                     sh "docker build -t ${imageTag} ./app" 
@@ -94,7 +132,7 @@ pipeline {
         // push image
         stage('Push to GHCR') {
             steps {
-                echo "3. Push the Docker Image to GHCR"
+                echo "5. Push the Docker Image to GHCR"
                 script {
                     def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
                     withCredentials([usernamePassword(credentialsId: GHCR_CREDS_ID, usernameVariable: 'USER', passwordVariable: 'TOKEN')]) {
@@ -108,7 +146,7 @@ pipeline {
         // deploy to server
         stage('Deploy to Server') {
             steps {
-                echo "4. Deploy the new image to the ${TARGET_DEPLOY_SERVER} server"
+                echo "6. Deploy the new image to the ${TARGET_DEPLOY_SERVER} server"
                 script {
                     // 어떤 컨테이너를 업데이트 및 업스트림 대상을 지정
                     def deployService = (env.BUILD_NUMBER.toInteger() % 2 == 0) ? "app-green" : "app-blue" 
