--- a/init.env
+++ b/init.env
@@ -1,2 +1,2 @@
-APP_BLUE_IMAGE=ghcr.io/paul2021-r/project-mini-frontend:latest
-APP_GREEN_IMAGE=ghcr.io/paul2021-r/project-mini-frontend:latest
+APP_BLUE_IMAGE=ghcr.io/paul2021-r/project-mini-frontend
+APP_GREEN_IMAGE=ghcr.io/paul2021-r/project-mini-frontend
