--- a/jenkinsfile
+++ b/jenkinsfile
@@ -180,12 +180,12 @@ pipeline {
                 script {
                     try {
                         // 어떤 컨테이너를 업데이트 및 업스트림 대상을 지정
-                        def deployService = (env.BUILD_NUMBER.toInteger() % 2 == 0) ? "app-green" : "app-blue" 
-                        def upstreamService = (deployService == "app-green") ? "app-blue" : "app-green"
+                        def deployService = (env.BUILD_NUMBER.toInteger() % 2 == 0) ? "nextjs-green" : "nextjs-blue" 
+                        def upstreamService = (deployService == "nextjs-green") ? "nextjs-blue" : "nextjs-green"
 
                         def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
                         def newTag = "${env.BUILD_NUMBER}"
-                        def tagEnvVar = (deployService == "app-green") ? "TAG_GREEN" : "TAG_BLUE"
+                        def tagEnvVar = (deployService == "nextjs-green") ? "TAG_GREEN" : "TAG_BLUE"
                         withCredentials([usernamePassword(credentialsId: GHCR_CREDS_ID, usernameVariable: 'GHCR_USER', passwordVariable: 'GHCR_TOKEN')]) {
                             sshagent(credentials: [TARGET_SSH_CREDS_ID]) {
                                 sh """ 
@@ -213,9 +213,11 @@ pipeline {
                                     docker compose --env-file init.env up -d --no-deps --force-recreate ${deployService}
 
                                     echo "--- (3/4) Switch Nginx Configuration to change traffic ---"
+                                    # TODO: 이부분 개선해야함
                                     sed -i "s|server ${upstreamService}:3000;|server ${deployService}:3000;|" ${TARGET_PROJECT_PATH}/nginx/nginx.conf
 
                                     echo "--- (4/4) Reload Nginx Configuration ---"
+                                    # TODO: 이부분 개선해야함
                                     docker compose --env-file init.env -f docker-compose.yml exec -T nginx nginx -s reload
 
                                     echo "--- Logging out from GHCR on target server ---"
