feature: new pages add

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,7 +1,8 @@
 # Docker Compose 파일 형식 버전
+name: project-protostar-frontend
 services:
   dev:
-    container_name: protostar-dev
+    container_name: protostar-next-dev
     build:
       context: .
       target: dev_runner
@@ -14,7 +15,7 @@ services:
     environment:
       - NODE_ENV=development
   prod:
-    container_name: protostar-prod
+    container_name: protostar-next-prod
     build:
       context: .
     ports:
